; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_log.c_from_callback.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_log.c_from_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i8** }

@IDENT_NO_DATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @from_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @from_callback(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.option*, %struct.option** %4, align 8
  %9 = getelementptr inbounds %struct.option, %struct.option* %8, i32 0, i32 0
  %10 = load i8**, i8*** %9, align 8
  store i8** %10, i8*** %7, align 8
  %11 = load i8**, i8*** %7, align 8
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 @free(i8* %12)
  %14 = load i32, i32* %6, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i8**, i8*** %7, align 8
  store i8* null, i8** %17, align 8
  br label %31

18:                                               ; preds = %3
  %19 = load i8*, i8** %5, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load i8*, i8** %5, align 8
  %23 = call i8* @xstrdup(i8* %22)
  %24 = load i8**, i8*** %7, align 8
  store i8* %23, i8** %24, align 8
  br label %30

25:                                               ; preds = %18
  %26 = load i32, i32* @IDENT_NO_DATE, align 4
  %27 = call i8* @git_committer_info(i32 %26)
  %28 = call i8* @xstrdup(i8* %27)
  %29 = load i8**, i8*** %7, align 8
  store i8* %28, i8** %29, align 8
  br label %30

30:                                               ; preds = %25, %21
  br label %31

31:                                               ; preds = %30, %16
  ret i32 0
}

declare dso_local i32 @free(i8*) #1

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i8* @git_committer_info(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
